fixed text align on home page

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -7,6 +7,7 @@
 .home-title h1 {
   color: white;
   font-size: 45px;
+
 }
 
 .card-product h2 {
@@ -38,3 +39,6 @@
   width: 50%;
 }
 
+.card-product-infos h2 {
+  text-align: left;
+}
